[gd_scene load_steps=3 format=3 uid="uid://cplrdxk4x88ca"]

[ext_resource type="Script" uid="uid://cd4mnivenn0xj" path="res://DialogueSystem.gd" id="1_dialogue"]

[sub_resource type="LabelSettings" id="LabelSettings_name"]
font_size = 18
font_color = Color(0.2, 0.6, 1, 1)

[node name="DialogueSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dialogue")

[node name="DialogueBox" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.95)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterName" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -140.0
offset_right = 200.0
offset_bottom = -115.0
grow_vertical = 0
text = "Character"
label_settings = SubResource("LabelSettings_name")

[node name="DialogueText" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Dialogue text goes here..."
fit_content = true

[node name="ContinuePrompt" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Press SPACE to continue"
horizontal_alignment = 2
